# bitrain

./: Cargo.toml  LICENSE
bitrain-core/: Cargo.toml
bitrain-core/src/: lib.rs  messages.rs  peer.rs
bitrain-derive/: Cargo.toml
bitrain-derive/src/: lib.rs  messages.rs  utils.rs
bitrain-derive/src/ast/: bounds.rs
bitrain-derive/src/messages/: decode.rs  encode.rs  recv.rs  send.rs  standalone.rs
build_torrent_core/: Cargo.toml
build_torrent_core/src/: bencoded.rs  lib.rs  messages.rs  peer.rs
build_torrent_core/src/bencoded/: custom.rs  encoding.rs  serde.rs
build_torrent_derive/: Cargo.toml
examples/: sample.torrent
