[package]
name = "bitrain-derive"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "^1.0.99", features = ["parsing", "full"] }
quote = "^1.0.21"
proc-macro2 = "^1.0.43"
darling = "0.14.1"

[features]
default = ["message"]
message = []